--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<button id="lightsOverlay" onclick="lights()">Lights Overlay</button>
 		<button id="sepiaOverlay" onclick="sepia()">Sepia Overlay</button>
 		<button id="bwButton" onclick="bw()">Black and White Overlay</button>
-		<button id="remove" onclick="remove()">Remove BUTTON!</button>
+		<button id="remove" onclick="remove()">Remove BUTTON!!</button>
 
 	</div>
 
