--- a/index.html
+++ b/index.html
@@ -1,41 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+	<head>
 		<link rel="stylesheet" href="stylesheet.css" title="external style sheet">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:100,200,400,500" rel="stylesheet">
-</head>
+	</head>
+	<body>
 
-<body>
+		
 
-			<div id="mainTitleContainer">
-				<h1 id="imgOverlayTitle"> Image Overlay </h1> 
-			</div>
+		<div id="mainTitleContainer">
+			<h1 id="title"> Drag me </h1>
+		</div>
 
-	<div class="mainImageContainer">
-		<img src = "goat.jpg" id="mainImage">
-		<img src = "overlay.jpg" id="overlay" class = "overlay">
-		<img src = "sepia.png" id="sepiaOverlay" class = "overlay">
-		<img src = "bwOverlay.png" id="bwButton" class = "overlay">
-	</div>
 
-	<div class = "buttonContainer">
-		<button id="lightsOverlay" onclick="lights()">Lights Overlay</button>
-		<button id="sepiaOverlay" onclick="sepia()">Sepia Overlay</button>
-		<button id="bwButton" onclick="bw()">Black and White Overlay</button>
-		<button id="remove" onclick="remove()">Remove BUTTON!!</button>
 
-	</div>
+		<div class="mainImageContainer" id = "mainImageContainer">
+		</div>
 
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
-	<script src="javascript.js"></script>
-	<script type = "text/javascript"> 
-	//JAVASCRIPT
-	//changeTitle();
-
-	//ADDED THIS!
-	</script>
-
-</body>
-
+		<!--<img src = "goat.jpg" class="mainImage" id="mainImage">-->
+		
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
+		<script src="javascript.js"></script>
+		<script type = "text/javascript">
+		//JAVASCRIPT
+		//changeTitle();
+		</script>
+	</body>
 </html>
