Added canvas support

--- a/index.html
+++ b/index.html
@@ -14,13 +14,20 @@
 
 
 
-		<div class="mainImageContainer" id = "mainImageContainer">
+		<div class="imageContainer" id = "mainImageContainer">
+			<img src = "LassondeLogo.png" class="overlay" id="overlayImage"> 
 		</div>
+			
+			<canvas id="cnv" onclick="createCanvas()"> CANVAS</canvas>
 
-		<!--<img src = "goat.jpg" class="mainImage" id="mainImage">-->
+		
+
+		
 		
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
-		<script src="javascript.js"></script>
+		<script src="saveImage.js"></script>
+		<script src="drag.js"></script>
+		
 		<script type = "text/javascript">
 		//JAVASCRIPT
 		//changeTitle();
