Added button styling

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
 
 		<div class="buttonContainer">
-			<input type="file" class="button" onchange="previewFile()">
-			<div class="button" onclick="createCanvas()"> <p>SAVE</p> </div>
+			<input type="file"   class="button" id="uploadButton" onchange="previewFile()"> 
+			<div class="button" id="saveButton" onclick="createCanvas()"> <p>SAVE</p> </div>
 		</div>
 
 
