--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
 		<div id="mainTitleContainer">
-			<h1 id="title"> Lassonde Photo Overlay </h1>
+			<h1 id="title"> Lassonde Photo Overlay - BETA </h1>
 		</div>
 
 		<div class="imageContainer" >
@@ -41,8 +41,6 @@
 		
 		<script type = "text/javascript">
 		//JAVASCRIPT
-		//changeTitle();
-
 
 		</script>
 	</body>
