--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	</head>
 	<body>
 
+		
+
 
 		<div id="mainTitleContainer">
 			<h1 id="title"> Lassonde Photo Overlay - BETA </h1>
@@ -13,7 +15,7 @@
 
 		<div class="imageContainer" >
 
-			<div  id = "mainImageContainer">
+			<div  id = "mainImageContainer" class="draggable">
 				<img src = "LassondeLogo.png" class="overlay" id="overlayImage"> 
 				<img src = "" class="" id="uploadedImg">
 			</div>
@@ -28,17 +30,13 @@
 		<div class="buttonContainer">
 			<input type="file"   class="button" id="uploadButton" onchange="previewFile()"> 
 			<div class="button" id="saveButton" onclick="createCanvas()"> <p>SAVE</p> </div>
+
 		</div>
 
 
-		 
-
-		
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
 		<script src="upload.js"></script>
 		<script src="saveImage.js"></script>
 		<script src="drag.js"></script>
-		
 		<script type = "text/javascript">
 		//JAVASCRIPT
 
