--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
 
 		<div class="buttonContainer">
 			<input type="file"   class="button" id="uploadButton" onchange="previewFile()"> 
-			<div class="button" id="saveButton" onclick="createCanvas()"> <p>SAVE</p> </div>
+			
+			<a href="#" title="" onclick="createCanvas()"> SAVE </a>
+			<div class="button" id="saveButton" onclick="createCanvas()">
+				
+			</div>
 
 		</div>
 
