--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<div class="buttonContainer">
 			<input type="file"   class="button" id="uploadButton" onchange="previewFile()"> 
 			
-			<a href="#" title="" onclick="createCanvas()"> SAVE </a>
+			<a href="#" title="" onclick="createCanvas()" download="image.png"> SAVE </a>
 			<div class="button" id="saveButton" onclick="createCanvas()">
 				
 			</div>
