--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 		<div class="buttonContainer">
 			<input type="file"   class="button" id="uploadButton" onchange="previewFile()"> 
 			
-			<a href="#" title="" onclick="createCanvas()" download="image.png"> SAVE </a>
+			<a href="#" title="" onclick="createCanvas()" download="image.png" id="saveLink"> SAVE </a>
+
+
 			<div class="button" id="saveButton" onclick="createCanvas()">
 				
 			</div>
