IGNORE ALL PREVIOUS COMMITS

--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
 		<div class="buttonContainer">
 			<input type="file"   class="button" id="uploadButton" onchange="previewFile()"> 
 			
-			<a href="#" title="" onclick="createCanvas()" download="image.png" id="saveLink"> SAVE </a>
+			
 
 
 			<div class="button" id="saveButton" onclick="createCanvas()">
-				
+			<p>SAVE</p>
+				<a href="#" title="" onclick="createCanvas()" download="image.png" id="saveLink"></a>
 			</div>
 
 		</div>
