--- a/index.html
+++ b/index.html
@@ -31,12 +31,11 @@
 			<input type="file"   class="button" id="uploadButton" onchange="previewFile()"> 
 
 			<div class="button" id="saveButton" onclick="createCanvas()">
-			
-				<a href="#" title="" onclick="createCanvas()" download="image.png" id="saveLink"> </a>
-				<p>SAVE</p>
+				<p>SAVE IMAGE</p>
+				<a href="#" title=""  download="image.png" id="saveLink"> SAVE </a>
 
 			</div>
-
+		
 		</div>
 
 
