--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			</div>
 
 			<div >
-				<canvas id="cnv"> CANVAS </canvas>
+				<!--<canvas id="cnv"> CANVAS </canvas> -->
 			</div>
 
 		</div>
