--- a/index.html
+++ b/index.html
@@ -20,31 +20,32 @@
 				<img src = "" class="" id="uploadedImg">
 			</div>
 
-			<div >
-				<!--<canvas id="cnv"> CANVAS </canvas> -->
-			</div>
-
 		</div>
 
 
 		<div class="buttonContainer">
-			<input type="file"   class="button" id="uploadButton" onchange="previewFile()"> 
 
+			<input type="file"   class="button" id="uploadButton" onchange="previewFile()"> 
 			<div class="button" id="saveButton" onclick="createCanvas()">
 				<p>SAVE IMAGE</p>
 				<a href="#" title=""  download="image.png" id="saveLink"> SAVE </a>
-
 			</div>
-		
+
+			<div class="sliderContainer">
+				<input type="range" min=0 max=300  oninput="updateSlider()" onupdate="updateSlider()" value="200" id="slider">
+				<h2 id="sliderVal">50</h2>
+			</div>
+			
 		</div>
 
 
 		<script src="upload.js"></script>
 		<script src="saveImage.js"></script>
 		<script src="drag.js"></script>
+		<script src="slider.js"></script>
 		<script type = "text/javascript">
 		//JAVASCRIPT
-
+		updateSlider();
 		</script>
 	</body>
 </html>
