Image scaling with saving

--- a/index.html
+++ b/index.html
@@ -20,11 +20,6 @@
 				<img src = "" class="" id="uploadedImg">
 			</div>
 
-
-			<canvas id="testCanvas">
-				
-			</canvas>
-
 		</div>
 
 
@@ -37,7 +32,7 @@
 			</div>
 
 			<div class="sliderContainer">
-				<input type="range" min=0 max=200  oninput="updateSlider()" onupdate="updateSlider()" value="100" id="slider">
+				<input type="range" min=0 max=200 step="1" oninput="updateSlider()" onupdate="updateSlider()" value="100" id="slider">
 				<h2 id="sliderVal">50</h2>
 			</div>
 			
