--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+
+<head>
 <title>Pierre's Birthday Filter</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,8 +15,14 @@ body, html {height: 100%}
     min-height: 100%;
     background-position: center;
     background-size: cover;
-}
+}	
 </style>
+
+<link rel="stylesheet" href="stylesheet.css" title="external style sheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto:100,200,400,500" rel="stylesheet">	
+	
+</head>	
+	
 <body>    
     
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
@@ -26,10 +34,10 @@ body, html {height: 100%}
       
       <div class="imageContainer" >
 
-			<div  id = "mainImageContainer" class="draggable">
-				<img src = "LassondeLogo.png" class="overlay" id="overlayImage"> 
-				<img src = "" class="" id="uploadedImg">
-			</div>
+		<div  id = "mainImageContainer" class="draggable">
+			<img src = "LassondeLogo.png" class="overlay" id="overlayImage"> 
+			<img src = "" class="" id="uploadedImg">
+		</div>
 
 		</div>
 
