--- a/index.html
+++ b/index.html
@@ -31,10 +31,19 @@
 				<a href="#" title=""  download="image.png" id="saveLink"> SAVE </a>
 			</div>
 
+
 			<div class="sliderContainer">
-				<input type="range" min=0 max=200 step="1" oninput="updateSlider()" onupdate="updateSlider()" value="100" id="slider">
+				<input type="range" min=0 max=400 step="1" oninput="updateSlider()" onupdate="updateSlider()" value="0" id="slider">
 				<h2 id="sliderVal">50</h2>
 			</div>
+
+			<div class="leftrightContainer">
+				<div class="button" id="leftButton" onclick="previousImage()"> <p> < </p> </div>
+				<div class="button" id="rightButton" onclick="nextImage()"><p> > </p> </div>
+			</div>
+			
+			<!-- <canvas id="testCanvas">THIS CANVAS IS FOR TESTING LOCALLY </canvas> -->
+				
 			
 		</div>
 
@@ -43,6 +52,7 @@
 		<script src="saveImage.js"></script>
 		<script src="drag.js"></script>
 		<script src="slider.js"></script>
+		<script src="overlays.js"></script>
 		<script type = "text/javascript">
 		//JAVASCRIPT
 		updateSlider();
