--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,10 @@
+
+	
 <!DOCTYPE html>
 <html>
+<head>
+		<link rel="stylesheet" href="stylesheet.css" title="external style sheet">
+		<link href="https://fonts.googleapis.com/css?family=Roboto:100,200,400,500" rel="stylesheet">
 <title>W3.CSS Template</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,8 +16,10 @@ body,h1 {font-family: "Raleway", Arial, sans-serif}
 h1 {letter-spacing: 6px}
 .w3-row-padding img {margin-bottom: 12px}
 </style>
+</head>  
+  
 <body>
-
+  
 <!-- !PAGE CONTENT! -->
 <div class="w3-content" style="max-width:1500px">
 
@@ -20,6 +27,49 @@ h1 {letter-spacing: 6px}
 <header class="w3-panel w3-center w3-opacity" style="padding:128px 16px">
   <h1 class="w3-xlarge">PHOTOGRAPHER</h1>
   <h1>John Doe</h1>
+
+		<div class="imageContainer" >
+
+			<div  id = "mainImageContainer" class="draggable">
+				<img src = "LassondeLogo.png" class="overlay" id="overlayImage"> 
+				<img src = "" class="" id="uploadedImg">
+			</div>
+
+		</div>
+
+
+		<div class="buttonContainer">
+
+			<input type="file"   class="button" id="uploadButton" onchange="previewFile()"> 
+			<div class="button" id="saveButton" onclick="createCanvas()">
+				<p>SAVE IMAGE</p>
+				<a href="#" title=""  download="image.png" id="saveLink"> SAVE </a>
+			</div>
+
+
+			<div class="sliderContainer">
+				<input type="range" min=0 max=400 step="1" oninput="updateSlider()" onupdate="updateSlider()" value="0" id="slider">
+				<h2 id="sliderVal">50</h2>
+			</div>
+
+			<div class="leftrightContainer">
+				<div class="button" id="leftButton" onclick="previousImage()"> <p> < </p> </div>
+				<div class="button" id="rightButton" onclick="nextImage()"><p> > </p> </div>
+			</div>
+			
+			<!-- <canvas id="testCanvas">THIS CANVAS IS FOR TESTING LOCALLY </canvas> -->
+				
+			
+		</div>
+
+
+		
+	
+  
+  
+  
+  
+
   
   <div class="w3-padding-32">
     <div class="w3-bar w3-border">
@@ -68,4 +118,15 @@ h1 {letter-spacing: 6px}
 </footer>
 
 </body>
+
+<script src="upload.js"></script>
+		<script src="saveImage.js"></script>
+		<script src="drag.js"></script>
+		<script src="slider.js"></script>
+		<script src="overlays.js"></script>
+		<script type = "text/javascript">
+		//JAVASCRIPT
+		updateSlider();
+		</script>
+  
 </html>
