--- a/index2.html
+++ b/index2.html
@@ -1,12 +1,9 @@
-
-	
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en">
+	<head>
 		<link rel="stylesheet" href="stylesheet.css" title="external style sheet">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:100,200,400,500" rel="stylesheet">
-<title>W3.CSS Template</title>
-<meta charset="UTF-8">
+		<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
@@ -16,17 +13,15 @@ body,h1 {font-family: "Raleway", Arial, sans-serif}
 h1 {letter-spacing: 6px}
 .w3-row-padding img {margin-bottom: 12px}
 </style>
-</head>  
-  
-<body>
-  
-<!-- !PAGE CONTENT! -->
-<div class="w3-content" style="max-width:1500px">
+	</head>
+	<body>
 
-<!-- Header -->
-<header class="w3-panel w3-center w3-opacity" style="padding:128px 16px">
-  <h1 class="w3-xlarge">PHOTOGRAPHER</h1>
-  <h1>John Doe</h1>
+		
+
+
+		<div id="mainTitleContainer">
+			<h1 id="title"> Lassonde Photo Overlay - BETA </h1>
+		</div>
 
 		<div class="imageContainer" >
 
@@ -63,63 +58,7 @@ h1 {letter-spacing: 6px}
 		</div>
 
 
-		
-	
-  
-  
-  
-  
-
-  
-  <div class="w3-padding-32">
-    <div class="w3-bar w3-border">
-      <a href="#" class="w3-bar-item w3-button">Home</a>
-      <a href="#" class="w3-bar-item w3-button w3-light-grey">Portfolio</a>
-      <a href="#" class="w3-bar-item w3-button">Contact</a>
-      <a href="#" class="w3-bar-item w3-button w3-hide-small">Weddings</a>
-    </div>
-  </div>
-</header>
-
-<!-- Photo Grid -->
-<div class="w3-row-padding w3-grayscale" style="margin-bottom:128px">
-  <div class="w3-half">
-    <img src="/w3images/wedding.jpg" style="width:100%">
-    <img src="/w3images/rocks.jpg" style="width:100%">
-    <img src="/w3images/falls2.jpg" style="width:100%">
-    <img src="/w3images/paris.jpg" style="width:100%">
-    <img src="/w3images/nature.jpg" style="width:100%">
-    <img src="/w3images/mist.jpg" style="width:100%">
-    <img src="/w3images/paris.jpg" style="width:100%">
-  </div>
-
-  <div class="w3-half">
-    <img src="/w3images/underwater.jpg" style="width:100%">
-    <img src="/w3images/ocean.jpg" style="width:100%">
-    <img src="/w3images/wedding.jpg" style="width:100%">
-    <img src="/w3images/mountainskies.jpg" style="width:100%">
-    <img src="/w3images/rocks.jpg" style="width:100%">
-    <img src="/w3images/underwater.jpg" style="width:100%">
-  </div>
-</div>
-  
-<!-- End Page Content -->
-</div>
-
-<!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-large"> 
-  <i class="fa fa-facebook-official w3-hover-opacity"></i>
-  <i class="fa fa-instagram w3-hover-opacity"></i>
-  <i class="fa fa-snapchat w3-hover-opacity"></i>
-  <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-  <i class="fa fa-twitter w3-hover-opacity"></i>
-  <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
-</footer>
-
-</body>
-
-<script src="upload.js"></script>
+		<script src="upload.js"></script>
 		<script src="saveImage.js"></script>
 		<script src="drag.js"></script>
 		<script src="slider.js"></script>
@@ -128,5 +67,5 @@ h1 {letter-spacing: 6px}
 		//JAVASCRIPT
 		updateSlider();
 		</script>
-  
+	</body>
 </html>
