--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<link rel="stylesheet" href="stylesheet.css" title="external style sheet">
+		<link rel="stylesheet" href="stylesheet2.css" title="external style sheet">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:100,200,400,500" rel="stylesheet">
 		<title>Birthday Filter</title>
 		<!-- insert V -->
