--- a/index2.html
+++ b/index2.html
@@ -34,7 +34,7 @@
 		<div class="imageContainer" >
 
 			<div  id = "mainImageContainer" class="draggable">
-				<img src = "bar-overlay.png" class="overlay" id="overlayImage"> 
+				<img src = "lassondelogo.png" class="overlay" id="overlayImage"> 
 				<img src = "" class="" id="uploadedImg">
 			</div>
 
