--- a/index3.html
+++ b/index3.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<link rel="stylesheet" href="stylesheet3.css" title="external style sheet">
+		<title>Pierre's Birthday Filter</title>
+		<link rel="stylesheet" href="stylesheet.css" title="external style sheet">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:100,200,400,500" rel="stylesheet">
 	</head>
 	<body>
@@ -10,7 +11,7 @@
 
 
 		<div id="mainTitleContainer">
-			<h1 id="title"> Lassonde Photo Overlay - BETA </h1>
+			<h1 id="title"> Pierre's Birthday Filter </h1>
 		</div>
 
 		<div class="imageContainer" >
@@ -22,10 +23,15 @@
 
 		</div>
 
+		<br />
 
 		<div class="buttonContainer">
 
 			<input type="file"   class="button" id="uploadButton" onchange="previewFile()"> 
+			
+			<div class="leftrightContainer">
+				<div class="button" id="rightButton" onclick="nextImage()"><p> > </p> </div>
+			</div>
 			<div class="button" id="saveButton" onclick="createCanvas()">
 				<p>SAVE IMAGE</p>
 				<a href="#" title=""  download="image.png" id="saveLink"> SAVE </a>
@@ -35,11 +41,6 @@
 			<div class="sliderContainer">
 				<input type="range" min=0 max=400 step="1" oninput="updateSlider()" onupdate="updateSlider()" value="0" id="slider">
 				<h2 id="sliderVal">50</h2>
-			</div>
-
-			<div class="leftrightContainer">
-				<div class="button" id="leftButton" onclick="previousImage()"> <p> < </p> </div>
-				<div class="button" id="rightButton" onclick="nextImage()"><p> > </p> </div>
 			</div>
 			
 			<!-- <canvas id="testCanvas">THIS CANVAS IS FOR TESTING LOCALLY </canvas> -->
