--- a/index3.html
+++ b/index3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<title>Pierre's Birthday Filter</title>
-		<link rel="stylesheet" href="stylesheet.css" title="external style sheet">
+		<link rel="stylesheet" href="stylesheet3.css" title="external style sheet">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:100,200,400,500" rel="stylesheet">
 	</head>
 	<body>
