--- a/index3.html
+++ b/index3.html
@@ -30,7 +30,7 @@
 			<input type="file"   class="button" id="uploadButton" onchange="previewFile()"> 
 			
 			<div class="leftrightContainer">
-				<div class="button" id="rightButton" onclick="nextImage()"><p> > </p> </div>
+				<div class="button" id="rightButton" onclick="nextImage()"><p> PICK FILTER </p> </div>
 			</div>
 			<div class="button" id="saveButton" onclick="createCanvas()">
 				<p>SAVE IMAGE</p>
