--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 				<div class="button" id="rightButton" onclick="nextImage()"><p> > </p> </div>
 			</div>
 			
+
+			<h3 id="orientationValue"> 	0 	</h3>
 			  <!--<canvas id="testCanvas">THIS CANVAS IS FOR TESTING LOCALLY </canvas> -->
 				
 			
