--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			
 
 			<h3 id="orientationValue"> 	0 	</h3>
-			  <!--<canvas id="testCanvas">THIS CANVAS IS FOR TESTING LOCALLY </canvas> -->
+			  <canvas id="testCanvas">THIS CANVAS IS FOR TESTING LOCALLY </canvas>
 				
 			
 		</div>
