--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
 			<div class="leftrightContainer">
 				<div class="button" id="leftButton" onclick="previousImage()"> <p> < </p> </div>
 				<div class="button" id="rightButton" onclick="nextImage()"><p> > </p> </div>
+				<div class="button" id="rotateButton" onclick="rotateImage()"><p> > </p> </div>
 			</div>
 			
 
 			<h3 id="orientationValue"> 	0 	</h3>
+			<h3 id="versionNumber"> 1 </h3>
 			  <canvas id="testCanvas">THIS CANVAS IS FOR TESTING LOCALLY </canvas>
 				
 			
