--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<div class="leftrightContainer">
 				<div class="button" id="leftButton" onclick="previousImage()"> <p> < </p> </div>
 				<div class="button" id="rightButton" onclick="nextImage()"><p> > </p> </div>
-				<div class="button" id="rotateButton" onclick="rotateImage()"><p> > </p> </div>
+				<div class="button" id="rotateButton" onclick="rotateImage()"><p> Rotate </p> </div>
 			</div>
 			
 
@@ -57,6 +57,7 @@
 		<script src="drag.js"></script>
 		<script src="slider.js"></script>
 		<script src="overlays.js"></script>
+		<script src="rotate.js"></script>
 
 		<script src="exif.js"></script>
 		<script src="binaryajax.js"></script>
