--- a/index.html
+++ b/index.html
@@ -42,11 +42,8 @@
 				<div class="button" id="rightButton" onclick="nextImage()"><p> > </p> </div>
 				<div class="button" id="rotateButton" onclick="rotateImage()"><p> Rotate </p> </div>
 			</div>
-			
 
-			<h3 id="orientationValue"> 	0 	</h3>
-			<h3 id="versionNumber"> 1 </h3>
-			  <canvas id="testCanvas">THIS CANVAS IS FOR TESTING LOCALLY </canvas>
+			  <!--<canvas id="testCanvas">THIS CANVAS IS FOR TESTING LOCALLY </canvas>-->
 				
 			
 		</div>
