--- a/index.html
+++ b/index.html
@@ -1,34 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<title>Pierre's Birthday Filter</title>
 		<link rel="stylesheet" href="stylesheet.css" title="external style sheet">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:100,200,400,500" rel="stylesheet">
 	</head>
 	<body>
 
-		
-
 
 		<div id="mainTitleContainer">
-			<h1 id="title"> Lassonde Photo Overlay - BETA </h1>
+			<h1 id="title"> Pierre's Birthday Filter </h1>
 		</div>
 
-		<div class=wrapperContainer > 
-			<div class="imageContainer" >
-				<div  id = "mainImageContainer" class="draggable">
-					<img src = "filter1.png" class="overlay" id="overlayImage"> 
-					<img src = "" class="" id="uploadedImg">
-				</div>
+		<div class="imageContainer" >
 
+			<div  id = "mainImageContainer" class="draggable">
+				<img src = "filter2.png" class="overlay" id="overlayImage"> 
+				<img src = "" class="" id="uploadedImg">
 			</div>
+
 		</div>
+
+		<br />
 
 		<div class="buttonContainer">
 
 			<input type="file"   class="button" id="uploadButton" onchange="previewFile()"> 
-			<div class="button" id="saveButton" onclick="createCanvas()">
+			
+			<div class="leftrightContainer">
+				<div class="button" id="filterButton" onclick="nextImage()"><p> PICK FILTER </p> </div>
+				<div class="button" id="rotateButton" onclick="rotateImage()"><p> ROTATE </p> </div>
+			</div>
+			<div class="button" id="saveButton" download="image.png" id="saveLink" onclick="createCanvas()">
 				<p>SAVE IMAGE</p>
-				<a href="#" title=""  download="image.png" id="saveLink"> SAVE </a>
 			</div>
 
 
@@ -36,14 +40,8 @@
 				<input type="range" min=0 max=400 step="1" oninput="updateSlider()" onupdate="updateSlider()" value="0" id="slider">
 				<h2 id="sliderVal">50</h2>
 			</div>
-
-			<div class="leftrightContainer">
-				<div class="button" id="leftButton" onclick="previousImage()"> <p> < </p> </div>
-				<div class="button" id="rightButton" onclick="nextImage()"><p> > </p> </div>
-				<div class="button" id="rotateButton" onclick="rotateImage()"><p> Rotate </p> </div>
-			</div>
-
-			  <!--<canvas id="testCanvas">THIS CANVAS IS FOR TESTING LOCALLY </canvas>-->
+			
+			<!-- <canvas id="testCanvas">THIS CANVAS IS FOR TESTING LOCALLY </canvas> -->
 				
 			
 		</div>
