--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 			<div class="button" id="rotateButton" onclick="rotateImage()"><p> ROTATE </p> </div>
 			<div class="button" id="filterButton" onclick="nextImage()"><p> PICK FILTER </p> </div>						
 			
-			<div class="button" id="saveButton" download="image.png" id="saveLink" onclick="createCanvas()">
-				<p>SAVE IMAGE</p>
+			<div class="button" id="saveButton" onclick="createCanvas()">
+				<p><a href="#" title=""  download="image.png" id="saveLink">SAVE IMAGE</a></p>
 			</div>
 
 
